Create rfm.out_default_free_parameters_for_rfm(); and call this function from the Start_to_Finish modules instead.

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__MoL_registration.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__MoL_registration.ipynb
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/MoL_registration.C\n"
+      "Writing ../src/MoL_registration.C\n"
      ]
     }
    ],
@@ -192,7 +192,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation test for MoL_registration.C: PASSED!\n"
+      "Validation test for MoL_registration.C: FAILED!\n",
+      "Diff:\n",
+      "52a53\n",
+      "> \n"
      ]
     }
    ],
@@ -275,19 +278,19 @@
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
