--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.ipynb
@@ -132,7 +132,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C\n"
+      "Writing ../src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C\n"
      ]
     }
    ],
@@ -1113,13 +1113,29 @@
      "text": [
       "Validation test for apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C: FAILED!\n",
       "Diff:\n",
-      "5,9d4\n",
+      "5,9c5\n",
       "<   \n",
       "<   CCTK_REAL gamma = eos.gamma_tab[0];\n",
       "<   CCTK_REAL kpoly = eos.k_tab[0];\n",
       "<   int gamma_equals2 = 1;\n",
       "<   if (fabs(gamma-2.0) > 1.e-10) gamma_equals2 = 0;\n",
-      "98,105c93,111\n",
+      "---\n",
+      "> \n",
+      "34a31\n",
+      "> \n",
+      "43a41\n",
+      "> \n",
+      "53a52\n",
+      "> \n",
+      "78a78\n",
+      "> \n",
+      "81a82\n",
+      "> \n",
+      "86a88\n",
+      "> \n",
+      "93a96\n",
+      "> \n",
+      "98,105c101,119\n",
       "<   CCTK_REAL Patm;\n",
       "<   // FIXME: the operation below could be replaced by\n",
       "<   //           Patm = kpoly*fasterpow_ppm_reconstruct(rho_b_atm,gamma)\n",
@@ -1148,11 +1164,15 @@
       ">   int polytropic_index = find_polytropic_K_and_Gamma_index(eos,rho_b_atm);\n",
       ">   CCTK_REAL Patm = eos.K_ppoly_tab[polytropic_index]*pow(rho_b_atm,eos.Gamma_ppoly_tab[polytropic_index]);\n",
       "> \n",
-      "149a156\n",
+      "123a138\n",
+      "> \n",
+      "147a163\n",
+      "> \n",
+      "149a166\n",
       "> #ifndef ENABLE_STANDALONE_IGM_C2P_SOLVER\n",
-      "150a158\n",
+      "150a168\n",
       "> #endif\n",
-      "167,171c175,179\n",
+      "167,171c185,189\n",
       "<   CCTK_REAL h_enthalpy=0,  P_cold=0,eps_cold=0,dPcold_drho,eps_th,gamma_cold; /* <- Note that in setting h, we need to define several \n",
       "<                                                                                *    other variables. Though some will be unused later\n",
       "<                                                                                *    in this function, they may be useful in other\n",
@@ -1164,15 +1184,31 @@
       ">                                                                          *    in this function, they may be useful in other\n",
       ">                                                                          *    functions */\n",
       ">   compute_P_cold__eps_cold__dPcold_drho__eps_th__h__Gamma_cold(U,eos,Gamma_th,P_cold,eps_cold,dPcold_drho,eps_th,h_enthalpy,Gamma_cold);\n",
-      "174c182,183\n",
+      "174c192,193\n",
       "<   enforce_pressure_floor_ceiling(stats,eos.K_poly,P_cold,METRIC_LAP_PSI4[PSI6],Psi6threshold,U[RHOB],rho_b_atm,  U[PRESSURE]);\n",
       "---\n",
       ">   int polytropic_index = find_polytropic_K_and_Gamma_index(eos,U[RHOB]);\n",
       ">   enforce_pressure_floor_ceiling(stats,eos.K_ppoly_tab[polytropic_index],P_cold,METRIC_LAP_PSI4[PSI6],Psi6threshold,U[RHOB],rho_b_atm,  U[PRESSURE]);\n",
-      "177c186\n",
+      "177c196\n",
       "<   CCTK_REAL eps = eps_cold + (U[PRESSURE]-P_cold)/(gamma_th-1.0)/U[RHOB];\n",
       "---\n",
-      ">   CCTK_REAL eps = eps_cold + (U[PRESSURE]-P_cold)/(Gamma_th-1.0)/U[RHOB];\n"
+      ">   CCTK_REAL eps = eps_cold + (U[PRESSURE]-P_cold)/(Gamma_th-1.0)/U[RHOB];\n",
+      "187a207\n",
+      "> \n",
+      "198a219\n",
+      "> \n",
+      "222a244\n",
+      "> \n",
+      "228a251\n",
+      "> \n",
+      "251a275\n",
+      "> \n",
+      "260a285\n",
+      "> \n",
+      "265a291\n",
+      "> \n",
+      "276a303\n",
+      "> \n"
      ]
     }
    ],
@@ -1255,19 +1291,19 @@
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
