--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__outer_boundaries.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__outer_boundaries.ipynb
@@ -179,7 +179,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/outer_boundaries.C\n"
+      "Writing ../src/outer_boundaries.C\n"
      ]
     }
    ],
@@ -620,8 +620,13 @@
       "Diff:\n",
       "19a20\n",
       "> #include \"IllinoisGRMHD_EoS_lowlevel_functs.C\"\n",
-      "154,155c155,166\n",
-      "< \n",
+      "31a33\n",
+      "> \n",
+      "73a76\n",
+      "> \n",
+      "91a95\n",
+      "> \n",
+      "155c159,170\n",
       "<   // FIXME: only for single gamma-law EOS.\n",
       "---\n",
       ">     \n",
@@ -636,7 +641,7 @@
       ">    * source file for the documentation on the\n",
       ">    * function.\n",
       ">    */\n",
-      "157,165c168,169\n",
+      "157,165c172,173\n",
       "<   eos.neos=neos;\n",
       "<   eos.K_poly=K_poly;\n",
       "<   eos.rho_tab[0]=rho_tab[0];\n",
@@ -648,7 +653,9 @@
       "< \n",
       "---\n",
       ">   initialize_EOS_struct_from_input(eos);\n",
-      ">     \n"
+      ">     \n",
+      "246a255\n",
+      "> \n"
      ]
     }
    ],
@@ -731,19 +738,19 @@
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
