--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__reconstruct_set_of_prims_PPM.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__reconstruct_set_of_prims_PPM.ipynb
@@ -322,7 +322,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/loop_defines_reconstruction.h\n"
+      "Writing ../src/loop_defines_reconstruction.h\n"
      ]
     }
    ],
@@ -391,7 +391,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/reconstruct_set_of_prims_PPM.C\n"
+      "Writing ../src/reconstruct_set_of_prims_PPM.C\n"
      ]
     }
    ],
@@ -1746,7 +1746,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation test for loop_defines_reconstruction.h: PASSED!\n"
+      "Validation test for loop_defines_reconstruction.h: FAILED!\n",
+      "Diff:\n",
+      "39a40\n",
+      "> \n"
      ]
     }
    ],
@@ -1826,10 +1829,20 @@
       "< static inline void compute_P_cold__gamma_cold(CCTK_REAL rho_b,eos_struct &eos,   CCTK_REAL &P_cold,CCTK_REAL &gamma_cold);\n",
       "---\n",
       "> static inline void compute_P_cold__Gamma_cold(CCTK_REAL rho_b,eos_struct &eos,   CCTK_REAL &P_cold,CCTK_REAL &Gamma_cold);\n",
-      "31a32,33\n",
+      "28a29\n",
+      "> \n",
+      "31a33,34\n",
       ">   DECLARE_CCTK_PARAMETERS;\n",
       "> \n",
-      "115,117c117,119\n",
+      "43a47\n",
+      "> \n",
+      "56a61\n",
+      "> \n",
+      "73a79\n",
+      "> \n",
+      "89a96\n",
+      "> \n",
+      "115,117c122,124\n",
       "< \tCCTK_REAL P_cold=0,gamma_cold=0;\n",
       "< \tcompute_P_cold__gamma_cold(U[RHOB][PLUS0],eos,  P_cold,gamma_cold);\n",
       "< \tsteepen_rho(U,slope_lim_dU,   eos.gamma_th,P_cold,gamma_cold,  Ur[RHOB],Ul[RHOB]);\n",
@@ -1837,21 +1850,49 @@
       "> \tCCTK_REAL P_cold,Gamma_cold;\n",
       "> \tcompute_P_cold__Gamma_cold(U[RHOB][PLUS0],eos,  P_cold,Gamma_cold);\n",
       "> \tsteepen_rho(U,slope_lim_dU,   Gamma_th,P_cold,Gamma_cold,  Ur[RHOB],Ul[RHOB]);\n",
-      "231c233\n",
+      "125a133\n",
+      "> \n",
+      "152a161\n",
+      "> \n",
+      "158a168\n",
+      "> \n",
+      "202a213\n",
+      "> \n",
+      "212a224\n",
+      "> \n",
+      "224a237\n",
+      "> \n",
+      "231c244\n",
       "< static inline void steepen_rho(CCTK_REAL U[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL slope_lim_dU[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL gamma_th,CCTK_REAL P_cold,CCTK_REAL gamma_cold,\n",
       "---\n",
       "> static inline void steepen_rho(CCTK_REAL U[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL slope_lim_dU[MAXNUMVARS][MAXNUMINDICES],CCTK_REAL Gamma_th,CCTK_REAL P_cold,CCTK_REAL Gamma_cold,\n",
-      "240c242\n",
+      "238a252\n",
+      "> \n",
+      "240c254,255\n",
       "<   CCTK_REAL Gamma = gamma_th + (gamma_cold-gamma_th)*P_cold/U[PRESSURE][PLUS0];\n",
       "---\n",
       ">   CCTK_REAL Gamma = Gamma_th + (Gamma_cold-Gamma_th)*P_cold/U[PRESSURE][PLUS0];\n",
-      "288c290\n",
+      "> \n",
+      "254a270\n",
+      "> \n",
+      "268a285\n",
+      "> \n",
+      "271a289\n",
+      "> \n",
+      "277a296\n",
+      "> \n",
+      "281a301\n",
+      "> \n",
+      "288c308,309\n",
       "< static inline void compute_P_cold__gamma_cold(CCTK_REAL rho_b,eos_struct &eos,   CCTK_REAL &P_cold,CCTK_REAL &gamma_cold) {\n",
       "---\n",
+      "> \n",
       "> static inline void compute_P_cold__Gamma_cold(CCTK_REAL rho_b,eos_struct &eos,   CCTK_REAL &P_cold,CCTK_REAL &Gamma_cold) {\n",
-      "293,311c295,303\n",
+      "293c314\n",
       "<   if(rho_b==0.0) { P_cold = 0.0; gamma_cold = eos.gamma_tab[0]; return; }\n",
-      "< \n",
+      "---\n",
+      ">   if(rho_b==0.0) { P_cold = 0.0; Gamma_cold = eos.Gamma_ppoly_tab[0]; return; }\n",
+      "295,311c316,323\n",
       "<   if(eos.neos==1) {\n",
       "<     // Eq. 14 of http://arxiv.org/pdf/0802.0200.pdf :\n",
       "<     // P_{cold} = K_i rho_i^{\\Gamma_i}\n",
@@ -1870,7 +1911,6 @@
       "<     gamma_cold = eos.gamma_tab[eos.neos];\n",
       "<   }\n",
       "---\n",
-      ">   if(rho_b==0.0) { P_cold = 0.0; Gamma_cold = eos.Gamma_ppoly_tab[0]; return; }\n",
       ">   /***********************************\n",
       ">    * Piecewise Polytropic EOS Patch  *\n",
       ">    * Computing P_cold and Gamma_cold *\n",
@@ -1878,7 +1918,21 @@
       ">   int polytropic_index = find_polytropic_K_and_Gamma_index(eos,rho_b);\n",
       ">   Gamma_cold = eos.Gamma_ppoly_tab[polytropic_index];\n",
       ">   P_cold     = eos.K_ppoly_tab[polytropic_index]*pow(rho_b,Gamma_cold);\n",
-      ">     \n"
+      ">     \n",
+      "313a326\n",
+      "> \n",
+      "334a348\n",
+      "> \n",
+      "338a353\n",
+      "> \n",
+      "345a361\n",
+      "> \n",
+      "348a365\n",
+      "> \n",
+      "351a369\n",
+      "> \n",
+      "359a378\n",
+      "> \n"
      ]
     }
    ],
@@ -1961,19 +2015,19 @@
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
