--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__symmetry__set_gzs_staggered_gfs.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__symmetry__set_gzs_staggered_gfs.ipynb
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/symmetry__set_gzs_staggered_gfs.C\n"
+      "Writing ../src/symmetry__set_gzs_staggered_gfs.C\n"
      ]
     }
    ],
@@ -204,7 +204,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation test for symmetry__set_gzs_staggered_gfs.C: PASSED!\n"
+      "Validation test for symmetry__set_gzs_staggered_gfs.C: FAILED!\n",
+      "Diff:\n",
+      "64a65\n",
+      "> \n"
      ]
     }
    ],
@@ -287,19 +290,19 @@
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
