--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__A_i_rhs_no_gauge_terms.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__A_i_rhs_no_gauge_terms.ipynb
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/A_i_rhs_no_gauge_terms.C\n"
+      "Writing ../src/A_i_rhs_no_gauge_terms.C\n"
      ]
     }
    ],
@@ -240,7 +240,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation test for A_i_rhs_no_gauge_terms.C: PASSED!\n"
+      "Validation test for A_i_rhs_no_gauge_terms.C: FAILED!\n",
+      "Diff:\n",
+      "100a101\n",
+      "> \n"
      ]
     }
    ],
@@ -323,19 +326,19 @@
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
