--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__IllinoisGRMHD_headers.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__IllinoisGRMHD_headers.ipynb
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/IllinoisGRMHD_headers.h\n"
+      "Writing ../src/IllinoisGRMHD_headers.h\n"
      ]
     }
    ],
@@ -244,7 +244,9 @@
       ">   CCTK_REAL eps_integ_const[MAX_EOS_PARAMS],K_ppoly_tab[MAX_EOS_PARAMS],Gamma_ppoly_tab[MAX_EOS_PARAMS];\n",
       "> };\n",
       "91a91\n",
-      "> #include \"IllinoisGRMHD_EoS_lowlevel_functs.C\"\n"
+      "> #include \"IllinoisGRMHD_EoS_lowlevel_functs.C\"\n",
+      "92a93\n",
+      "> \n"
      ]
     }
    ],
@@ -327,19 +329,19 @@
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
