--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__harm_utoprim_2d.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__harm_utoprim_2d.ipynb
@@ -137,7 +137,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/harm_utoprim_2d.c\n"
+      "Writing ../src/harm_utoprim_2d.c\n"
      ]
     }
    ],
@@ -1997,15 +1997,22 @@
       "---\n",
       ">        prim[NPR]        = primitive variables (guess on input, calculated values on\n",
       ">                                                 output if there are no problems);\n",
-      "114c116\n",
+      "114c116,117\n",
       "< int Utoprim_2d(CCTK_REAL U[NPR], CCTK_REAL gcov[NDIM][NDIM], CCTK_REAL gcon[NDIM][NDIM], \n",
       "---\n",
+      "> \n",
       "> int Utoprim_2d(eos_struct eos, CCTK_REAL U[NPR], CCTK_REAL gcov[NDIM][NDIM], CCTK_REAL gcon[NDIM][NDIM], \n",
-      "150c152\n",
+      "130a134\n",
+      "> \n",
+      "141a146\n",
+      "> \n",
+      "150c155\n",
       "<   ret = Utoprim_new_body(U_tmp, gcov, gcon, gdet, prim_tmp,n_iter);\n",
       "---\n",
       ">   ret = Utoprim_new_body(eos, U_tmp, gcov, gcon, gdet, prim_tmp,n_iter);\n",
-      "175,177c177,179\n",
+      "163a169\n",
+      "> \n",
+      "175,177c181,183\n",
       "<              /  rho gamma        \\\n",
       "<          U = |  alpha T^t_\\mu  |\n",
       "<              \\  alpha B^i        /\n",
@@ -2013,7 +2020,7 @@
       ">              /   rho gamma   \\\n",
       ">          U = | alpha T^t_\\mu |\n",
       ">              \\   alpha B^i   /\n",
-      "181,184c183,186\n",
+      "181,184c187,190\n",
       "<                /    rho        \\\n",
       "<     prim = |    uu         |\n",
       "<                | \\tilde{u}^i   |\n",
@@ -2023,77 +2030,99 @@
       ">       prim = |     uu      |\n",
       ">              | \\tilde{u}^i |\n",
       ">              \\  alpha B^i  /\n",
-      "198c200\n",
+      "198c204\n",
       "<          3 -> failure: W<0 or W>W_TOO_BIG\n",
       "---\n",
       ">              3 -> failure: W<0 or W>W_TOO_BIG\n",
-      "204c206\n",
+      "204c210\n",
       "< static int Utoprim_new_body(CCTK_REAL U[NPR], CCTK_REAL gcov[NDIM][NDIM], \n",
       "---\n",
       "> static int Utoprim_new_body(eos_struct eos, CCTK_REAL U[NPR], CCTK_REAL gcov[NDIM][NDIM], \n",
-      "237a240,243\n",
+      "217a224\n",
+      "> \n",
+      "237a245,248\n",
       ">   // FIXME: The exact form of n^{\\mu} can be found\n",
       ">   //        in eq. (2.116) and implementing it\n",
       ">   //        directly is a lot more efficient than\n",
       ">   //        performing n^{\\mu} = g^{\\mu\\nu}n_{nu}\n",
-      "270c276\n",
+      "248a260\n",
+      "> \n",
+      "270c282\n",
       "<   p = pressure_rho0_u(rho0,u) ;\n",
       "---\n",
       ">   p = pressure_rho0_u(eos, rho0,u) ;\n",
-      "288c294\n",
+      "283a296\n",
+      "> \n",
+      "288c301\n",
       "<   retval = general_newton_raphson( x_2d, n, n_iter, func_vsq, Bsq,QdotBsq,Qtsq,Qdotn,D) ;  \n",
       "---\n",
       ">   retval = general_newton_raphson( eos, x_2d, n, n_iter, func_vsq, Bsq,QdotBsq,Qtsq,Qdotn,D) ;  \n",
-      "318c324\n",
+      "311a325\n",
+      "> \n",
+      "318c332\n",
       "<   p = pressure_rho0_w(rho0,w) ;\n",
       "---\n",
       ">   p = pressure_rho0_w(eos, rho0,w) ;\n",
-      "429,430c435,436\n",
+      "352a367\n",
+      "> \n",
+      "371a387\n",
+      "> \n",
+      "393a410\n",
+      "> \n",
+      "419a437\n",
+      "> \n",
+      "429,430c447,448\n",
       "< static int general_newton_raphson( CCTK_REAL x[], int n, long &n_iter,\n",
       "<                                    void (*funcd) (CCTK_REAL [], CCTK_REAL [], CCTK_REAL [], \n",
       "---\n",
       "> static int general_newton_raphson( eos_struct eos, CCTK_REAL x[], int n, long &n_iter,\n",
       ">                                    void (*funcd) (eos_struct, CCTK_REAL [], CCTK_REAL [], CCTK_REAL [], \n",
-      "454c460\n",
+      "454c472\n",
       "<     (*funcd) (x, dx, resid, jac, &f, &df, n, Bsq,QdotBsq,Qtsq,Qdotn,D);  /* returns with new dx, f, df */\n",
       "---\n",
       ">     (*funcd) (eos, x, dx, resid, jac, &f, &df, n, Bsq,QdotBsq,Qtsq,Qdotn,D);  /* returns with new dx, f, df */\n",
-      "540c546\n",
+      "522a541\n",
+      "> \n",
+      "540c559\n",
       "< static void func_vsq(CCTK_REAL x[], CCTK_REAL dx[], CCTK_REAL resid[], \n",
       "---\n",
       "> static void func_vsq(eos_struct eos, CCTK_REAL x[], CCTK_REAL dx[], CCTK_REAL resid[], \n",
-      "579c585\n",
+      "579c598\n",
       "<     p = pressure_rho0_w(rho0,w) ;\n",
       "---\n",
       ">     p = pressure_rho0_w(eos, rho0,w) ;\n",
-      "586c592\n",
+      "586c605\n",
       "<     p = pressure_rho0_w(rho0,w) ;\n",
       "---\n",
       ">     p = pressure_rho0_w(eos, rho0,w) ;\n",
-      "595c601\n",
+      "595c614\n",
       "<   p_tmp  = pressure_W_vsq( W, vsq , D);\n",
       "---\n",
       ">   p_tmp  = pressure_W_vsq( eos, W, vsq , D);\n",
-      "597c603\n",
+      "597c616\n",
       "<   dPdvsq = dpdvsq_calc( W, vsq, D );\n",
       "---\n",
       ">   dPdvsq = dpdvsq_calc( eos, W, vsq, D );\n",
-      "651,652c657,658\n",
+      "635a655\n",
+      "> \n",
+      "646a667\n",
+      "> \n",
+      "651,652c672,673\n",
       "<         -- Gamma-law equation of state;\n",
       "<         -- pressure as a function of W, vsq, and D:\n",
       "---\n",
       ">         -- Hybrid single and piecewise polytropic equation of state;\n",
       ">         -- pressure as a function of P_cold, eps_cold, W, vsq, and D:\n",
-      "654c660\n",
+      "654c675\n",
       "< static CCTK_REAL pressure_W_vsq(CCTK_REAL W, CCTK_REAL vsq, CCTK_REAL &D) \n",
       "---\n",
       "> static CCTK_REAL pressure_W_vsq(eos_struct eos, CCTK_REAL W, CCTK_REAL vsq, CCTK_REAL &D) \n",
-      "655a662,663\n",
+      "655a677,678\n",
       "> \n",
       "> #ifndef ENABLE_STANDALONE_IGM_C2P_SOLVER\n",
-      "656a665\n",
+      "656a680\n",
       "> #endif\n",
-      "658,661c667,679\n",
+      "658,661c682,694\n",
       "<   CCTK_REAL gtmp;\n",
       "<   gtmp = 1. - vsq;\n",
       "<   \n",
@@ -2112,24 +2141,28 @@
       "> \n",
       ">   // Compute p = P_{cold} + P_{th}\n",
       ">   return( ( P_cold + (Gamma_th - 1.0)*( W*inv_gammasq - D*inv_gamma*( 1.0 + eps_cold ) ) )/Gamma_th );\n",
-      "673a692,693\n",
+      "665a699\n",
+      "> \n",
+      "673a708,709\n",
       "> \n",
       "> #ifndef ENABLE_STANDALONE_IGM_C2P_SOLVER\n",
-      "675c695,697\n",
+      "675c711,713\n",
       "<   return( (gamma_th /* <- Should be local polytropic Gamma factor */  - 1.) * (1. - vsq) /  gamma_th /* <- Should be local polytropic Gamma factor */  ) ;\n",
       "---\n",
       "> #endif\n",
       "> \n",
       ">   return( (Gamma_th - 1.0) * (1.0 - vsq) /  Gamma_th  ) ;\n",
-      "685c707\n",
+      "678a717\n",
+      "> \n",
+      "685c724\n",
       "< static CCTK_REAL dpdvsq_calc(CCTK_REAL W, CCTK_REAL vsq, CCTK_REAL &D)\n",
       "---\n",
       "> static CCTK_REAL dpdvsq_calc(eos_struct eos, CCTK_REAL W, CCTK_REAL vsq, CCTK_REAL &D)\n",
-      "686a709,711\n",
+      "686a726,728\n",
       "> \n",
       ">   // This sets Gamma_th\n",
       "> #ifndef ENABLE_STANDALONE_IGM_C2P_SOLVER\n",
-      "688c713,752\n",
+      "688c730,772\n",
       "<   return( (gamma_th /* <- Should be local polytropic Gamma factor */  - 1.) * ( 0.5 * D / sqrt(1.-vsq)  - W  ) / gamma_th /* <- Should be local polytropic Gamma factor */   ) ;\n",
       "---\n",
       "> #endif\n",
@@ -2147,6 +2180,7 @@
       ">   int polytropic_index = find_polytropic_K_and_Gamma_index(eos,rho_b);\n",
       ">   CCTK_REAL Gamma_ppoly_tab = eos.Gamma_ppoly_tab[polytropic_index];\n",
       "> \n",
+      "> \n",
       ">   /* Now we implement the derivative of P_cold with respect\n",
       ">    * to v^{2}, given by\n",
       ">    *  ----------------------------------------------------\n",
@@ -2155,6 +2189,7 @@
       ">    */\n",
       ">   CCTK_REAL dPcold_dvsq = P_cold * pow(gamma,2.0 + 0.5*Gamma_ppoly_tab);\n",
       "> \n",
+      "> \n",
       ">   /* Now we implement the derivative of eps_cold with respect\n",
       ">    * to v^{2}, given by\n",
       ">    *  -----------------------------------------------------------------------------------\n",
@@ -2162,6 +2197,7 @@
       ">    *  -----------------------------------------------------------------------------------\n",
       ">    */\n",
       ">   CCTK_REAL depscold_dvsq = ( gamma/(D*(Gamma_ppoly_tab-1.0)) ) * ( dPcold_dvsq + 0.5*gamma*gamma*P_cold );\n",
+      "> \n",
       ">   /* Now we implement the derivative of p_hybrid with respect\n",
       ">    * to v^{2}, given by\n",
       ">    *  -----------------------------------------------------------------------------\n",
@@ -2172,9 +2208,7 @@
       ">    *  -----------------------------------------------------------------------------\n",
       ">    */\n",
       ">   return( ( dPcold_dvsq + (Gamma_th-1.0)*( -W + D*gamma*(1+eps_cold)/2.0 - D*depscold_dvsq/gamma ) )/Gamma_th );\n",
-      "695c759\n",
-      "< \n",
-      "---\n",
+      "694a779\n",
       "> #endif\n"
      ]
     }
@@ -2258,19 +2292,19 @@
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
