--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb
@@ -136,11 +136,31 @@
     "# Choices are: Spherical, SinhSpherical, SinhSphericalv2, Cylindrical, SinhCylindrical, \n",
     "#              SymTP, SinhSymTP\n",
     "CoordSystem     = \"Spherical\"\n",
+    "\n",
+    "\n",
+    "# Step 2.a: Set defaults for Coordinate system parameters.\n",
+    "#           These are perhaps the most commonly adjusted parameters,\n",
+    "#           so we enable modifications at this high level.\n",
     "# domain_size     = 7.5 # SET BELOW BASED ON TOV STELLAR RADIUS\n",
+    "\n",
+    "# sinh_width sets the default value for:\n",
+    "#   * SinhSpherical's params.SINHW\n",
+    "#   * SinhCylindrical's params.SINHW{RHO,Z}\n",
+    "#   * SinhSymTP's params.SINHWAA\n",
     "sinh_width      = 0.4 # If Sinh* coordinates chosen\n",
+    "\n",
+    "# sinhv2_const_dr sets the default value for:\n",
+    "#   * SinhSphericalv2's params.const_dr\n",
+    "#   * SinhCylindricalv2's params.const_d{rho,z}\n",
     "sinhv2_const_dr = 0.05# If Sinh*v2 coordinates chosen\n",
+    "\n",
+    "# SymTP_bScale sets the default value for:\n",
+    "#   * SinhSymTP's params.bScale\n",
     "SymTP_bScale    = 0.5 # If SymTP chosen\n",
-    "# Choices are: Euler, \"RK2 Heun\", \"RK2 MP\", \"RK2 Ralston\", RK3, \"RK3 Heun\", \"RK3 Ralston\",\n",
+    "\n",
+    "# Step 2.b: Set the order of spatial and temporal derivatives;\n",
+    "#           the core data type, and the CFL factor.\n",
+    "# RK_method choices include: Euler, \"RK2 Heun\", \"RK2 MP\", \"RK2 Ralston\", RK3, \"RK3 Heun\", \"RK3 Ralston\",\n",
     "#              SSPRK3, RK4, DP5, DP5alt, CK5, DP6, L6, DP8\n",
     "RK_method = \"RK4\"\n",
     "FD_order  = 4        # Finite difference order: even numbers only, starting with 2. 12 is generally unstable\n",
@@ -905,48 +925,11 @@
     "par.generate_Cparameters_Ccodes(os.path.join(Ccodesdir))\n",
     "\n",
     "# Step 3.d.ii: Set free_parameters.h\n",
-    "with open(os.path.join(Ccodesdir,\"free_parameters.h\"),\"w\") as file:\n",
-    "    file.write(\"\"\"\n",
-    "// Set free-parameter values.\n",
-    "\n",
-    "const REAL domain_size    = \"\"\"+str(domain_size)+\"\"\";\n",
-    "const REAL sinh_width     = \"\"\"+str(sinh_width)+\"\"\";\n",
-    "const REAL sinhv2_const_dr= \"\"\"+str(sinhv2_const_dr)+\"\"\";\n",
-    "const REAL SymTP_bScale   = \"\"\"+str(SymTP_bScale)+\";\\n\")\n",
-    "\n",
-    "    coordparams = \"\"\n",
-    "    if CoordSystem == \"Spherical\":\n",
-    "        coordparams += \"\"\"\n",
-    "        params.RMAX = domain_size;\\n\"\"\"\n",
-    "    elif \"SinhSpherical\" in CoordSystem:\n",
-    "        coordparams += \"\"\"\n",
-    "        params.AMPL = domain_size;\n",
-    "        params.SINHW=  sinh_width;\\n\"\"\"\n",
-    "        if CoordSystem == \"SinhSphericalv2\":\n",
-    "            coordparams += \"        params.const_dr = sinhv2_const_dr;\\n\"\n",
-    "    elif \"SymTP\" in CoordSystem:\n",
-    "        coordparams += \"\"\"\n",
-    "        params.bScale =  SymTP_bScale;\n",
-    "        params.AMAX   =  domain_size;\\n\"\"\"\n",
-    "        if CoordSystem == \"SinhSymTP\":\n",
-    "            coordparams += \"        params.SINHWAA = sinh_width;\\n\"\n",
-    "    elif CoordSystem == \"Cartesian\":\n",
-    "        coordparams += \"\"\"\n",
-    "        params.xmin = -domain_size, params.xmax = domain_size;\n",
-    "        params.ymin = -domain_size, params.ymax = domain_size;\n",
-    "        params.zmin = -domain_size, params.zmax = domain_size;\\n\"\"\"\n",
-    "    elif CoordSystem == \"Cylindrical\":\n",
-    "        coordparams += \"\"\"\n",
-    "        params.ZMIN   = -domain_size;\n",
-    "        params.ZMAX   =  domain_size;\n",
-    "        params.RHOMAX =  domain_size;\\n\"\"\"\n",
-    "    elif CoordSystem == \"SinhCylindrical\":\n",
-    "        coordparams += \"\"\"\n",
-    "        params.AMPLRHO = domain_size;\n",
-    "        params.SINHWRHO= sinh_width;\n",
-    "        params.AMPLZ   = domain_size;\n",
-    "        params.SINHWZ  = sinh_width;\\n\"\"\"\n",
-    "    file.write(coordparams+\"\\n\")\n",
+    "# Output to $Ccodesdir/free_parameters.h reference metric parameters based on generic\n",
+    "#    domain_size,sinh_width,sinhv2_const_dr,SymTP_bScale,\n",
+    "#    parameters set above. \n",
+    "rfm.out_default_free_parameters_for_rfm(os.path.join(Ccodesdir,\"free_parameters.h\"),\n",
+    "                                        domain_size,sinh_width,sinhv2_const_dr,SymTP_bScale)\n",
     "\n",
     "# Step 1.c.ii: Generate set_Nxx_dxx_invdx_params__and__xx.h:\n",
     "rfm.set_Nxx_dxx_invdx_params__and__xx_h(Ccodesdir)\n",
