--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_Exact_Initial_Data.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_Exact_Initial_Data.ipynb
@@ -283,10 +283,35 @@
     "# Choices are: Spherical, SinhSpherical, SinhSphericalv2, Cylindrical, SinhCylindrical, \n",
     "#              SymTP, SinhSymTP\n",
     "CoordSystem     = \"Spherical\"\n",
+    "\n",
+    "# Step 2.a: Set defaults for Coordinate system parameters.\n",
+    "#           These are perhaps the most commonly adjusted parameters,\n",
+    "#           so we enable modifications at this high level.\n",
+    "\n",
+    "# domain_size sets the default value for:\n",
+    "#   * Spherical's params.RMAX\n",
+    "#   * SinhSpherical*'s params.AMAX\n",
+    "#   * Cartesians*'s -params.{x,y,z}min & .{x,y,z}max\n",
+    "#   * Cylindrical's -params.ZMIN & .{Z,RHO}MAX\n",
+    "#   * SinhCylindrical's params.AMPL{RHO,Z}\n",
+    "#   * *SymTP's params.AMAX\n",
     "domain_size     = 3.0\n",
+    "\n",
+    "# sinh_width sets the default value for:\n",
+    "#   * SinhSpherical's params.SINHW\n",
+    "#   * SinhCylindrical's params.SINHW{RHO,Z}\n",
+    "#   * SinhSymTP's params.SINHWAA\n",
     "sinh_width      = 0.4 # If Sinh* coordinates chosen\n",
+    "\n",
+    "# sinhv2_const_dr sets the default value for:\n",
+    "#   * SinhSphericalv2's params.const_dr\n",
+    "#   * SinhCylindricalv2's params.const_d{rho,z}\n",
     "sinhv2_const_dr = 0.05# If Sinh*v2 coordinates chosen\n",
+    "\n",
+    "# SymTP_bScale sets the default value for:\n",
+    "#   * SinhSymTP's params.bScale\n",
     "SymTP_bScale    = 0.5 # If SymTP chosen\n",
+    "\n",
     "FD_order  = 4        # Finite difference order: even numbers only, starting with 2. 12 is generally unstable\n",
     "REAL      = \"double\" # Best to use double here.\n",
     "\n",
@@ -357,50 +382,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 3.a.i: Output the free parameters associated with the numerical grid\n",
-    "with open(os.path.join(Ccodesdir,\"free_parameters.h\"),\"w\") as file:\n",
-    "    file.write(\"\"\"\n",
-    "\n",
-    "// Set free-parameter values.\n",
-    "\n",
-    "const REAL domain_size    = \"\"\"+str(domain_size)+\"\"\";\n",
-    "const REAL sinh_width     = \"\"\"+str(sinh_width)+\"\"\";\n",
-    "const REAL sinhv2_const_dr= \"\"\"+str(sinhv2_const_dr)+\"\"\";\n",
-    "const REAL SymTP_bScale   = \"\"\"+str(SymTP_bScale)+\";\\n\")\n",
-    "\n",
-    "    coordparams = \"\"\n",
-    "    if CoordSystem == \"Spherical\":\n",
-    "        coordparams += \"\"\"\n",
-    "        params.RMAX = domain_size;\\n\"\"\"\n",
-    "    elif \"SinhSpherical\" in CoordSystem:\n",
-    "        coordparams += \"\"\"\n",
-    "        params.AMPL = domain_size;\n",
-    "        params.SINHW=  sinh_width;\\n\"\"\"\n",
-    "        if CoordSystem == \"SinhSphericalv2\":\n",
-    "            coordparams += \"        params.const_dr = sinhv2_const_dr;\\n\"\n",
-    "    elif \"SymTP\" in CoordSystem:\n",
-    "        coordparams += \"\"\"\n",
-    "        params.bScale =  SymTP_bScale;\n",
-    "        params.AMAX   =  domain_size;\\n\"\"\"\n",
-    "        if CoordSystem == \"SinhSymTP\":\n",
-    "            coordparams += \"        params.SINHWAA = sinh_width;\\n\"\n",
-    "    elif CoordSystem == \"Cartesian\":\n",
-    "        coordparams += \"\"\"\n",
-    "        params.xmin = -domain_size, params.xmax = domain_size;\n",
-    "        params.ymin = -domain_size, params.ymax = domain_size;\n",
-    "        params.zmin = -domain_size, params.zmax = domain_size;\\n\"\"\"\n",
-    "    elif CoordSystem == \"Cylindrical\":\n",
-    "        coordparams += \"\"\"\n",
-    "        params.ZMIN   = -domain_size;\n",
-    "        params.ZMAX   =  domain_size;\n",
-    "        params.RHOMAX =  domain_size;\\n\"\"\"\n",
-    "    elif CoordSystem == \"SinhCylindrical\":\n",
-    "        coordparams += \"\"\"\n",
-    "        params.AMPLRHO = domain_size;\n",
-    "        params.SINHWRHO= sinh_width;\n",
-    "        params.AMPLZ   = domain_size;\n",
-    "        params.SINHWZ  = sinh_width;\\n\"\"\"\n",
-    "    file.write(coordparams+\"\\n\")\n",
+    "# Step 3.a.i: Set free_parameters.h\n",
+    "# Output to $Ccodesdir/free_parameters.h reference metric parameters based on generic\n",
+    "#    domain_size,sinh_width,sinhv2_const_dr,SymTP_bScale,\n",
+    "#    parameters set above. \n",
+    "rfm.out_default_free_parameters_for_rfm(os.path.join(Ccodesdir,\"free_parameters.h\"),\n",
+    "                                        domain_size,sinh_width,sinhv2_const_dr,SymTP_bScale)\n",
     "\n",
     "# Step 3.a.ii: Generate set_Nxx_dxx_invdx_params__and__xx.h:\n",
     "rfm.set_Nxx_dxx_invdx_params__and__xx_h(Ccodesdir)\n",
