--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-Psi4.ipynb
@@ -144,21 +144,47 @@
     "# Choices are: Spherical, SinhSpherical, SinhSphericalv2, Cylindrical, SinhCylindrical, \n",
     "#              SymTP, SinhSymTP\n",
     "CoordSystem     = \"SinhSpherical\"\n",
+    "\n",
     "if EvolOption == \"low resolution\":\n",
+    "    # domain_size sets the default value for:\n",
+    "    #   * Spherical's params.RMAX\n",
+    "    #   * SinhSpherical*'s params.AMAX\n",
+    "    #   * Cartesians*'s -params.{x,y,z}min & .{x,y,z}max\n",
+    "    #   * Cylindrical's -params.ZMIN & .{Z,RHO}MAX\n",
+    "    #   * SinhCylindrical's params.AMPL{RHO,Z}\n",
+    "    #   * *SymTP's params.AMAX\n",
     "    domain_size = 150 # Length scale of computational domain\n",
     "    final_time  = 200 # Final time\n",
     "    FD_order    = 8   # Finite difference order: even numbers only, starting with 2. 12 is generally unstable\n",
     "elif EvolOption == \"high resolution\":\n",
+    "    # See above for description of the domain_size parameter\n",
     "    domain_size = 300 # Length scale of computational domain\n",
     "    final_time  = 275 # Final time\n",
     "    FD_order    = 10  # Finite difference order: even numbers only, starting with 2. 12 is generally unstable\n",
     "else:\n",
     "    print(\"Error: output is not tuned for Nr = \"+str(Nr)+\" . Plotting disabled.\")\n",
     "    exit(1)\n",
+    "\n",
+    "# sinh_width sets the default value for:\n",
+    "#   * SinhSpherical's params.SINHW\n",
+    "#   * SinhCylindrical's params.SINHW{RHO,Z}\n",
+    "#   * SinhSymTP's params.SINHWAA\n",
     "sinh_width      = 0.2 # If Sinh* coordinates chosen\n",
-    "sinhv2_const_dr = 0.05# If Sinh*v2 coordinates chosen\n",
+    "\n",
+    "# sinhv2_const_dr sets the default value for:\n",
+    "#   * SinhSphericalv2's params.const_dr\n",
+    "#   * SinhCylindricalv2's params.const_d{rho,z}\n",
+    "sinhv2_const_dr = 0.05 # If Sinh*v2 coordinates chosen\n",
+    "\n",
+    "# SymTP_bScale sets the default value for:\n",
+    "#   * SinhSymTP's params.bScale\n",
     "SymTP_bScale    = 0.5 # If SymTP chosen\n",
-    "# Choices are: Euler, \"RK2 Heun\", \"RK2 MP\", \"RK2 Ralston\", RK3, \"RK3 Heun\", \"RK3 Ralston\",\n",
+    "\n",
+    "# Step 2.b: Set the timestepping order,\n",
+    "#           the core data type, and the CFL factor.\n",
+    "# Step 2.b: Set the order of spatial and temporal derivatives;\n",
+    "#           the core data type, and the CFL factor.\n",
+    "# RK_method choices include: Euler, \"RK2 Heun\", \"RK2 MP\", \"RK2 Ralston\", RK3, \"RK3 Heun\", \"RK3 Ralston\",\n",
     "#              SSPRK3, RK4, DP5, DP5alt, CK5, DP6, L6, DP8\n",
     "RK_method = \"RK4\"\n",
     "REAL      = \"double\" # Best to use double here.\n",
@@ -702,47 +728,13 @@
     "// Set free parameters for the (Brill-Lindquist) initial data\n",
     "params.BH1_posn_x = 0.0; params.BH1_posn_y = 0.0; params.BH1_posn_z =+0.25;\n",
     "params.BH2_posn_x = 0.0; params.BH2_posn_y = 0.0; params.BH2_posn_z =-0.25;\n",
-    "params.BH1_mass = 0.5; params.BH2_mass = 0.5;\n",
+    "params.BH1_mass = 0.5; params.BH2_mass = 0.5;\\n\"\"\")\n",
     "\n",
-    "const REAL domain_size    = \"\"\"+str(domain_size)+\"\"\";\n",
-    "const REAL final_time     = \"\"\"+str(final_time)+\"\"\";\n",
-    "const REAL sinh_width     = \"\"\"+str(sinh_width)+\"\"\";\n",
-    "const REAL sinhv2_const_dr= \"\"\"+str(sinhv2_const_dr)+\"\"\";\n",
-    "const REAL SymTP_bScale   = \"\"\"+str(SymTP_bScale)+\";\\n\")\n",
-    "\n",
-    "    coordparams = \"\"\n",
-    "    if CoordSystem == \"Spherical\":\n",
-    "        coordparams += \"\"\"\n",
-    "        params.RMAX = domain_size;\\n\"\"\"\n",
-    "    elif \"SinhSpherical\" in CoordSystem:\n",
-    "        coordparams += \"\"\"\n",
-    "        params.AMPL = domain_size;\n",
-    "        params.SINHW=  sinh_width;\\n\"\"\"\n",
-    "        if CoordSystem == \"SinhSphericalv2\":\n",
-    "            coordparams += \"        params.const_dr = sinhv2_const_dr;\\n\"\n",
-    "    elif \"SymTP\" in CoordSystem:\n",
-    "        coordparams += \"\"\"\n",
-    "        params.bScale =  SymTP_bScale;\n",
-    "        params.AMAX   =  domain_size;\\n\"\"\"\n",
-    "        if CoordSystem == \"SinhSymTP\":\n",
-    "            coordparams += \"        params.SINHWAA = sinh_width;\\n\"\n",
-    "    elif CoordSystem == \"Cartesian\":\n",
-    "        coordparams += \"\"\"\n",
-    "        params.xmin = -domain_size, params.xmax = domain_size;\n",
-    "        params.ymin = -domain_size, params.ymax = domain_size;\n",
-    "        params.zmin = -domain_size, params.zmax = domain_size;\\n\"\"\"\n",
-    "    elif CoordSystem == \"Cylindrical\":\n",
-    "        coordparams += \"\"\"\n",
-    "        params.ZMIN   = -domain_size;\n",
-    "        params.ZMAX   =  domain_size;\n",
-    "        params.RHOMAX =  domain_size;\\n\"\"\"\n",
-    "    elif CoordSystem == \"SinhCylindrical\":\n",
-    "        coordparams += \"\"\"\n",
-    "        params.AMPLRHO = domain_size;\n",
-    "        params.SINHWRHO= sinh_width;\n",
-    "        params.AMPLZ   = domain_size;\n",
-    "        params.SINHWZ  = sinh_width;\\n\"\"\"\n",
-    "    file.write(coordparams+\"\\n\")\n",
+    "# Append to $Ccodesdir/free_parameters.h reference metric parameters based on generic\n",
+    "#    domain_size,sinh_width,sinhv2_const_dr,SymTP_bScale,\n",
+    "#    parameters set above. \n",
+    "rfm.out_default_free_parameters_for_rfm(os.path.join(Ccodesdir,\"free_parameters.h\"),\n",
+    "                                        domain_size,sinh_width,sinhv2_const_dr,SymTP_bScale)\n",
     "\n",
     "# Step 3.f.iii: Generate set_Nxx_dxx_invdx_params__and__xx.h:\n",
     "rfm.set_Nxx_dxx_invdx_params__and__xx_h(Ccodesdir)\n",
