--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
@@ -140,11 +140,38 @@
     "# Choices are: Spherical, SinhSpherical, SinhSphericalv2, Cylindrical, SinhCylindrical, \n",
     "#              SymTP, SinhSymTP\n",
     "CoordSystem     = \"Spherical\"\n",
+    "\n",
+    "# Step 2.a: Set defaults for Coordinate system parameters.\n",
+    "#           These are perhaps the most commonly adjusted parameters,\n",
+    "#           so we enable modifications at this high level.\n",
+    "\n",
+    "# domain_size sets the default value for:\n",
+    "#   * Spherical's params.RMAX\n",
+    "#   * SinhSpherical*'s params.AMAX\n",
+    "#   * Cartesians*'s -params.{x,y,z}min & .{x,y,z}max\n",
+    "#   * Cylindrical's -params.ZMIN & .{Z,RHO}MAX\n",
+    "#   * SinhCylindrical's params.AMPL{RHO,Z}\n",
+    "#   * *SymTP's params.AMAX\n",
     "domain_size     = 7.5 # Needed for all coordinate systems.\n",
+    "\n",
+    "# sinh_width sets the default value for:\n",
+    "#   * SinhSpherical's params.SINHW\n",
+    "#   * SinhCylindrical's params.SINHW{RHO,Z}\n",
+    "#   * SinhSymTP's params.SINHWAA\n",
     "sinh_width      = 0.4 # If Sinh* coordinates chosen\n",
-    "sinhv2_const_dr = 0.05# If Sinh*v2 coordinates chosen\n",
+    "\n",
+    "# sinhv2_const_dr sets the default value for:\n",
+    "#   * SinhSphericalv2's params.const_dr\n",
+    "#   * SinhCylindricalv2's params.const_d{rho,z}\n",
+    "sinhv2_const_dr = 0.05 # If Sinh*v2 coordinates chosen\n",
+    "\n",
+    "# SymTP_bScale sets the default value for:\n",
+    "#   * SinhSymTP's params.bScale\n",
     "SymTP_bScale    = 0.5 # If SymTP chosen\n",
-    "# Choices are: Euler, \"RK2 Heun\", \"RK2 MP\", \"RK2 Ralston\", RK3, \"RK3 Heun\", \"RK3 Ralston\",\n",
+    "\n",
+    "# Step 2.b: Set the order of spatial and temporal derivatives;\n",
+    "#           the core data type, and the CFL factor.\n",
+    "# RK_method choices include: Euler, \"RK2 Heun\", \"RK2 MP\", \"RK2 Ralston\", RK3, \"RK3 Heun\", \"RK3 Ralston\",\n",
     "#              SSPRK3, RK4, DP5, DP5alt, CK5, DP6, L6, DP8\n",
     "RK_method = \"RK4\"\n",
     "FD_order  = 4        # Finite difference order: even numbers only, starting with 2. 12 is generally unstable\n",
@@ -275,7 +302,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished BSSN symbolic expressions in 4.844878673553467 seconds.\n"
+      "Finished BSSN symbolic expressions in 3.5992212295532227 seconds.\n"
      ]
     }
    ],
@@ -481,20 +508,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
       "Generating C code for Ricci tensor in Spherical coordinates.\n",
-      "Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.\n",
       "Generating C code for BSSN RHSs in Spherical coordinates.\n",
-      "Finished BL initial data codegen in 14.507330417633057 seconds.\n",
+      "Generating optimized C code for Brill-Lindquist initial data. May take a while, depending on CoordSystem.\n",
       "Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
+      "Generating optimized C code for Hamiltonian constraint. May take a while, depending on CoordSystem.\n",
       "Output C function enforce_detgammabar_constraint() to file BSSN_Two_BHs_Collide_Ccodes/enforce_detgammabar_constraint.h\n",
-      "Finished gamma constraint C codegen in 0.27500176429748535 seconds.\n",
+      "Finished gamma constraint C codegen in 0.13740801811218262 seconds.\n",
+      "Finished BL initial data codegen in 5.055639028549194 seconds.\n",
       "Output C function Hamiltonian_constraint() to file BSSN_Two_BHs_Collide_Ccodes/Hamiltonian_constraint.h\n",
-      "Finished Hamiltonian C codegen in 25.12691020965576 seconds.\n",
+      "Finished Hamiltonian C codegen in 8.597307920455933 seconds.\n",
       "Output C function rhs_eval() to file BSSN_Two_BHs_Collide_Ccodes/rhs_eval.h\n",
-      "Finished BSSN_RHS C codegen in 31.759349822998047 seconds.\n",
+      "Finished BSSN_RHS C codegen in 12.87565279006958 seconds.\n",
       "Output C function Ricci_eval() to file BSSN_Two_BHs_Collide_Ccodes/Ricci_eval.h\n",
-      "Finished Ricci C codegen in 58.21298289299011 seconds.\n"
+      "Finished Ricci C codegen in 30.3601016998291 seconds.\n"
      ]
     }
    ],
@@ -560,56 +587,23 @@
     "// Set free parameters for the (Brill-Lindquist) initial data\n",
     "params.BH1_posn_x = 0.0; params.BH1_posn_y = 0.0; params.BH1_posn_z =+0.5;\n",
     "params.BH2_posn_x = 0.0; params.BH2_posn_y = 0.0; params.BH2_posn_z =-0.5;\n",
-    "params.BH1_mass = 0.5; params.BH2_mass = 0.5;\n",
+    "params.BH1_mass = 0.5; params.BH2_mass = 0.5;\\n\"\"\")\n",
     "\n",
-    "const REAL domain_size    = \"\"\"+str(domain_size)+\"\"\";\n",
-    "const REAL sinh_width     = \"\"\"+str(sinh_width)+\"\"\";\n",
-    "const REAL sinhv2_const_dr= \"\"\"+str(sinhv2_const_dr)+\"\"\";\n",
-    "const REAL SymTP_bScale   = \"\"\"+str(SymTP_bScale)+\";\\n\")\n",
+    "# Append to $Ccodesdir/free_parameters.h reference metric parameters based on generic\n",
+    "#    domain_size,sinh_width,sinhv2_const_dr,SymTP_bScale,\n",
+    "#    parameters set above. \n",
+    "rfm.out_default_free_parameters_for_rfm(os.path.join(Ccodesdir,\"free_parameters.h\"),\n",
+    "                                        domain_size,sinh_width,sinhv2_const_dr,SymTP_bScale)\n",
     "\n",
-    "    coordparams = \"\"\n",
-    "    if CoordSystem == \"Spherical\":\n",
-    "        coordparams += \"\"\"\n",
-    "        params.RMAX = domain_size;\\n\"\"\"\n",
-    "    elif \"SinhSpherical\" in CoordSystem:\n",
-    "        coordparams += \"\"\"\n",
-    "        params.AMPL = domain_size;\n",
-    "        params.SINHW=  sinh_width;\\n\"\"\"\n",
-    "        if CoordSystem == \"SinhSphericalv2\":\n",
-    "            coordparams += \"        params.const_dr = sinhv2_const_dr;\\n\"\n",
-    "    elif \"SymTP\" in CoordSystem:\n",
-    "        coordparams += \"\"\"\n",
-    "        params.bScale =  SymTP_bScale;\n",
-    "        params.AMAX   =  domain_size;\\n\"\"\"\n",
-    "        if CoordSystem == \"SinhSymTP\":\n",
-    "            coordparams += \"        params.SINHWAA = sinh_width;\\n\"\n",
-    "    elif CoordSystem == \"Cartesian\":\n",
-    "        coordparams += \"\"\"\n",
-    "        params.xmin = -domain_size, params.xmax = domain_size;\n",
-    "        params.ymin = -domain_size, params.ymax = domain_size;\n",
-    "        params.zmin = -domain_size, params.zmax = domain_size;\\n\"\"\"\n",
-    "    elif CoordSystem == \"Cylindrical\":\n",
-    "        coordparams += \"\"\"\n",
-    "        params.ZMIN   = -domain_size;\n",
-    "        params.ZMAX   =  domain_size;\n",
-    "        params.RHOMAX =  domain_size;\\n\"\"\"\n",
-    "    elif CoordSystem == \"SinhCylindrical\":\n",
-    "        coordparams += \"\"\"\n",
-    "        params.AMPLRHO = domain_size;\n",
-    "        params.SINHWRHO= sinh_width;\n",
-    "        params.AMPLZ   = domain_size;\n",
-    "        params.SINHWZ  = sinh_width;\\n\"\"\"\n",
-    "    file.write(coordparams+\"\\n\")\n",
-    "\n",
-    "# Step 1.c.ii: Generate set_Nxx_dxx_invdx_params__and__xx.h:\n",
+    "# Step 3.d.iii: Generate set_Nxx_dxx_invdx_params__and__xx.h:\n",
     "rfm.set_Nxx_dxx_invdx_params__and__xx_h(Ccodesdir)\n",
     "\n",
-    "# Step 1.c.iii: Generate xxCart.h, which contains xxCart() for\n",
+    "# Step 3.d.iv: Generate xxCart.h, which contains xxCart() for\n",
     "#               (the mapping from xx->Cartesian) for the chosen\n",
     "#               CoordSystem:\n",
     "rfm.xxCart_h(\"xxCart\",\"./set_Cparameters.h\",os.path.join(Ccodesdir,\"xxCart.h\"))\n",
     "\n",
-    "# Step 1.c.iv: Generate declare_Cparameters_struct.h, set_Cparameters_default.h, and set_Cparameters[-SIMD].h\n",
+    "# Step 3.d.v: Generate declare_Cparameters_struct.h, set_Cparameters_default.h, and set_Cparameters[-SIMD].h\n",
     "par.generate_Cparameters_Ccodes(os.path.join(Ccodesdir))"
    ]
   },
@@ -1067,14 +1061,14 @@
      "text": [
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops BSSN_Two_BHs_Collide_Ccodes/BrillLindquist_Playground.c -o BSSN_Two_BHs_Collide_Ccodes/output/BrillLindquist_Playground -lm`...\n",
-      "Finished executing in 10.238182067871094 seconds.\n",
+      "Finished executing in 6.231178045272827 seconds.\n",
       "Finished compilation.\n",
-      "Executing `taskset -c 0,1 ./BrillLindquist_Playground 72 12 2 1.0`...\n",
-      "\u001b[2KIt: 550 t=7.50 dt=1.36e-02 | 100.0%; ETA 0 s | t/h 6170.84 | gp/s 8.69e+05\n",
-      "Finished executing in 4.428756237030029 seconds.\n",
-      "Executing `taskset -c 0,1 ./BrillLindquist_Playground 96 16 2 1.0`...\n",
-      "\u001b[2KIt: 970 t=7.44 dt=7.67e-03 | 99.2%; ETA 0 s | t/h 2165.84 | gp/s 9.64e+055\n",
-      "Finished executing in 12.671931982040405 seconds.\n",
+      "Executing `taskset -c 0,1,2,3 ./BrillLindquist_Playground 72 12 2 1.0`...\n",
+      "\u001b[2KIt: 550 t=7.50 dt=1.36e-02 | 100.0%; ETA 0 s | t/h 13350.08 | gp/s 1.88e+06\n",
+      "Finished executing in 2.2151031494140625 seconds.\n",
+      "Executing `taskset -c 0,1,2,3 ./BrillLindquist_Playground 96 16 2 1.0`...\n",
+      "\u001b[2KIt: 970 t=7.44 dt=7.67e-03 | 99.2%; ETA 0 s | t/h 3254.38 | gp/s 1.45e+06\n",
+      "Finished executing in 8.442832231521606 seconds.\n",
       "Finished this code cell.\n"
      ]
     }
@@ -1499,10 +1493,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb to latex\n",
-      "[NbConvertApp] Support files will be in Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide_files/\n",
-      "[NbConvertApp] Making directory Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide_files\n",
-      "[NbConvertApp] Making directory Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide_files\n",
-      "[NbConvertApp] Writing 169279 bytes to Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.tex\n",
+      "[NbConvertApp] Writing 164119 bytes to Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
