Tutorial-GiRaFFEfood_HO_1D_tests.ipynb: Fixed a small typo.

--- a/in_progress/Tutorial-GiRaFFEfood_HO_1D_tests.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_HO_1D_tests.ipynb
@@ -154,7 +154,7 @@
     "\\min(a,b) &= \\tfrac{1}{2} \\left( a+b - (a-b) \\right) = b \\\\\n",
     "\\max(a,b) &= \\tfrac{1}{2} \\left( a+b + (a-b) \\right) = a, \\\\\n",
     "\\end{align}\n",
-    "and in the cse $a<b$, the reverse holds:\n",
+    "and in the case $a<b$, the reverse holds:\n",
     "\\begin{align}\n",
     "\\min(a,b) &= \\tfrac{1}{2} \\left( a+b - (b-a) \\right) = a \\\\\n",
     "\\max(a,b) &= \\tfrac{1}{2} \\left( a+b + (b-a) \\right) = b, \\\\\n",
