Tutorial-GRHD_Equations-Cartesian-c-code.ipynb: Use the new u4U_in_terms_of_vU__rescale_vU_by_applying_speed_limit() instead. Also add rescaledvU as a global.

--- a/Tutorial-GRHD_Equations-Cartesian.ipynb
+++ b/Tutorial-GRHD_Equations-Cartesian.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "# Equations of General Relativistic Hydrodynamics (GRHD)\n",
     "\n",
-    "## Author: Zach Etienne\n",
+    "## Authors: Zach Etienne & Patrick Nelson\n",
     "\n",
     "## This notebook documents and constructs a number of quantities useful for building symbolic (SymPy) expressions for the equations of general relativistic hydrodynamics (GRHD), using the same (Valencia) formalism as `IllinoisGRMHD`\n",
     "\n",
@@ -132,7 +132,7 @@
     "        1. [Step 5.b.ii](#stildeisource): Compute source term of the $\\tilde{S}_i$ equation: $\\frac{1}{2} \\alpha\\sqrt{\\gamma} T^{\\mu\\nu} g_{\\mu\\nu,i}$:\n",
     "            * **compute_S_tilde_source_termD()**\n",
     "1. [Step 6](#convertvtou): Conversion of $v^i$ to $u^\\mu$ (Courtesy Patrick Nelson):\n",
-    "    * **u4U_in_terms_of_vU_apply_speed_limit()**\n",
+    "    * **u4U_in_terms_of_ValenciavU__rescale_ValenciavU_by_applying_speed_limit()**, **u4U_in_terms_of_vU__rescale_vU_by_applying_speed_limit()**\n",
     "1. [Step 7](#declarevarsconstructgrhdeqs): Declare ADM and hydrodynamical input variables, and construct GRHD equations\n",
     "1. [Step 8](#code_validation): Code Validation against `GRHD.equations` NRPy+ module\n",
     "1. [Step 9](#latex_pdf_output): Output this notebook to $\\LaTeX$-formatted PDF file"
@@ -627,10 +627,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 6.a: Convert Valencia 3-velocity v_{(n)}^i into u^\\mu, applying a speed limiter\n",
+    "# Step 6.a: Convert Valencia 3-velocity v_{(n)}^i into u^\\mu, and apply a speed limiter\n",
+    "#           Speed-limited ValenciavU is output to rescaledValenciavU global.\n",
     "def u4U_in_terms_of_ValenciavU__rescale_ValenciavU_by_applying_speed_limit(alpha,betaU,gammaDD, ValenciavU):\n",
-    "    # Inputs:  Metric gammaDD, lapse alpha, Valencia 3-velocity ValenciavU\n",
-    "    # Outputs: u^0, speed-limited ValenciavU\n",
+    "    # Inputs:  Metric lapse alpha, shift betaU, 3-metric gammaDD, Valencia 3-velocity ValenciavU\n",
+    "    # Outputs (as globals): u4U_ito_ValenciavU, rescaledValenciavU\n",
     "    \n",
     "    # R = gamma_{ij} v^i v^j\n",
     "    R = sp.sympify(0)\n",
@@ -657,7 +658,8 @@
     "    #    - Adapted from Connie Francis' \"Tiny Bubbles\"\n",
     "    TINYDOUBLE = par.Cparameters(\"#define\",thismodule,\"TINYDOUBLE\",1e-100)\n",
     "\n",
-    "    # With our rescaled Rmax, v^i = sqrt{Rmax/R} v^i\n",
+    "    # The rescaled (speed-limited) Valencia 3-velocity \n",
+    "    #     is given by, v_{(n)}^i = sqrt{Rstar/R} v^i\n",
     "    global rescaledValenciavU\n",
     "    rescaledValenciavU = ixp.zerorank1()\n",
     "    for i in range(3):\n",
@@ -666,6 +668,7 @@
     "        #   meaningful, there must be something wrong with your unit conversion.\n",
     "        rescaledValenciavU[i] = ValenciavU[i]*sp.sqrt(Rstar/(R + TINYDOUBLE))\n",
     "\n",
+    "    # Finally compute u^mu in terms of Valenciav^i\n",
     "    # u^0 = 1/(alpha-sqrt(1-R^*))\n",
     "    global u4U_ito_ValenciavU\n",
     "    u4U_ito_ValenciavU = ixp.zerorank1(DIM=4)\n",
@@ -674,16 +677,24 @@
     "    for i in range(3):\n",
     "        u4U_ito_ValenciavU[i+1] = u4U_ito_ValenciavU[0] * (alpha * rescaledValenciavU[i] - betaU[i])\n",
     "\n",
-    "# Step 6.b: Convert v^i into u^\\mu, applying a speed limiter\n",
+    "# Step 6.b: Convert v^i into u^\\mu, and apply a speed limiter.\n",
+    "#           Speed-limited vU is output to rescaledvU global.\n",
     "def u4U_in_terms_of_vU__rescale_vU_by_applying_speed_limit(alpha,betaU,gammaDD, vU):\n",
     "    ValenciavU = ixp.zerorank1()\n",
     "    for i in range(3):\n",
     "        ValenciavU[i] = (vU[i] + betaU[i])/alpha\n",
     "    u4U_in_terms_of_ValenciavU__rescale_ValenciavU_by_applying_speed_limit(alpha,betaU,gammaDD, ValenciavU)\n",
+    "    # Since ValenciavU is written in terms of vU, \n",
+    "    #   u4U_ito_ValenciavU is actually u4U_ito_vU\n",
     "    global u4U_ito_vU\n",
     "    u4U_ito_vU = ixp.zerorank1(DIM=4)\n",
     "    for mu in range(4):\n",
-    "        u4U_ito_vU[mu] = u4U_ito_ValenciavU[mu]"
+    "        u4U_ito_vU[mu] = u4U_ito_ValenciavU[mu]\n",
+    "    # Finally compute the rescaled (speed-limited) vU\n",
+    "    global rescaledvU\n",
+    "    rescaledvU = ixp.zerorank1(DIM=3)\n",
+    "    for i in range(3):\n",
+    "        rescaledvU[i] = alpha * rescaledValenciavU[i] - betaU[i]"
    ]
   },
   {
@@ -863,13 +874,13 @@
     "for i in range(3):\n",
     "    namecheck_list.extend([gfnm(\"S_tildeD\",i),gfnm(\"vU\",i),gfnm(\"rho_star_fluxU\",i),\n",
     "                           gfnm(\"tau_tilde_fluxU\",i),gfnm(\"S_tilde_source_termD\",i),\n",
-    "                           gfnm(\"rescaledValenciavU\",i)])\n",
+    "                           gfnm(\"rescaledValenciavU\",i), gfnm(\"rescaledvU\",i)])\n",
     "    exprcheck_list.extend([Ge.S_tildeD[i],Ge.vU[i],Ge.rho_star_fluxU[i],\n",
     "                           Ge.tau_tilde_fluxU[i],Ge.S_tilde_source_termD[i],\n",
-    "                           Ge.rescaledValenciavU[i]])\n",
+    "                           Ge.rescaledValenciavU[i],Ge.rescaledvU[i]])\n",
     "    expr_list.extend([S_tildeD[i],vU[i],rho_star_fluxU[i],\n",
     "                      tau_tilde_fluxU[i],S_tilde_source_termD[i],\n",
-    "                      rescaledValenciavU[i]])\n",
+    "                      rescaledValenciavU[i],rescaledvU[i]])\n",
     "    for j in range(3):\n",
     "        namecheck_list.extend([gfnm(\"S_tilde_fluxUD\",i,j)])\n",
     "        exprcheck_list.extend([Ge.S_tilde_fluxUD[i][j]])\n",
@@ -905,7 +916,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GRHD_Equations-Cartesian.ipynb to latex\n",
-      "[NbConvertApp] Writing 92352 bytes to Tutorial-GRHD_Equations-Cartesian.tex\n",
+      "[NbConvertApp] Writing 93538 bytes to Tutorial-GRHD_Equations-Cartesian.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
