Tutorial-ETK_thorn-WaveToyNRPy: add validation notes

--- a/Tutorial-ETK_thorn-WaveToyNRPy.ipynb
+++ b/Tutorial-ETK_thorn-WaveToyNRPy.ipynb
@@ -20,7 +20,9 @@
     "\n",
     "[comment]: <> (Abstract: TODO)\n",
     "\n",
-    "[comment]: <> (Notebook Status and Validation Notes: TODO)\n",
+    "**Notebook Status:** <font color='green'><b> Validated</b></font> \n",
+    "\n",
+    "**Validation Notes:** As demonstrated [in the plot below](#code_validation), the numerical error converges to zero at the expected rate.\n",
     "\n",
     "### NRPy+ Source Code for this module: \n",
     "* [ScalarWave/ScalarWave_RHSs.py](../edit/ScalarWave/ScalarWave_RHSs.py) [\\[**tutorial**\\]](Tutorial-ScalarWave.ipynb) \n",
@@ -667,7 +669,7 @@
       "[NbConvertApp] Making directory Tutorial-ETK_thorn-WaveToyNRPy_files\n",
       "[NbConvertApp] Making directory Tutorial-ETK_thorn-WaveToyNRPy_files\n",
       "[NbConvertApp] Making directory Tutorial-ETK_thorn-WaveToyNRPy_files\n",
-      "[NbConvertApp] Writing 68462 bytes to Tutorial-ETK_thorn-WaveToyNRPy.tex\n",
+      "[NbConvertApp] Writing 68569 bytes to Tutorial-ETK_thorn-WaveToyNRPy.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -705,7 +707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
