Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants: fix syntax warning

--- a/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
+++ b/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
@@ -98,7 +98,7 @@
     "scalars_lhrh = [lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4r\"),rhs=weyl.psi4r),\\\n",
     "                lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4i\"),rhs=weyl.psi4i)]\n",
     "\n",
-    "if output_scalars is \"all_psis\" or \"all_psis_and_invariants\":\n",
+    "if output_scalars == \"all_psis\" or output_scalars == \"all_psis_and_invariants\":\n",
     "    scalars_lhrh = [\\\n",
     "                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4r\"),rhs=weyl.psi4r),\\\n",
     "                    lhrh(lhs=gri.gfaccess(\"out_gfs\",\"psi4i\"),rhs=weyl.psi4i),\\\n",
@@ -122,7 +122,6 @@
     "#par.set_parval_from_str(\"WeylScal4NRPy.WeylScalars_Cartesian::output_scalars\",\"all_psis_and_invariants\")\n",
     "output_scalars = par.parval_from_str(\"output_scalars\")\n",
     "\n",
-    "#if output_scalars is \"all_psis_and_invariants\":\n",
     "import WeylScal4NRPy.WeylScalarInvariants_Cartesian as invar\n",
     "invar.WeylScalarInvariants_Cartesian()\n",
     "invars_lhrh = [\\\n",
@@ -499,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +506,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb to latex\n",
-      "[NbConvertApp] Writing 65291 bytes to Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.tex\n",
+      "[NbConvertApp] Writing 64122 bytes to Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
